# botanim-bot

./: README.md  pyproject.toml
botanim_bot/: bot.py
